tests/expectations/parser/unreachable/equality_and_order_expression.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ; {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 . {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 import {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 , {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 * {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 + {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 - {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 / {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 [ {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ] {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 { {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 } {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ( {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ) {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 : {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 :: {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ? {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 _ {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 = {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 == {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 ! {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 != {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 > {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 >= {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 < {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 <= {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 > {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 .. {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 as {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 console {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 const {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 let {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 for {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 if {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 else {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 i8 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 i16 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 i32 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 i64 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 i128 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 u8 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 u16 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 u32 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 u64 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 u128 {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 & {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 return {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 self {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 Self {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 true {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 false {}
     | ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:1:1
     |
   1 | if 10 0 {}
     | ^^""",
]
